--- a/wp-content/themes/traveling-store/scss/style.scss
+++ b/wp-content/themes/traveling-store/scss/style.scss
@@ -35,6 +35,11 @@ $mainGreyColor: rgba(51, 51, 51, 0.5);
 $mainBorderColor: #E7E7E7;
 $paymentBoxColor: #f5f5f5;
 
+body {
+  &.fixed {
+    overflow: hidden;
+  }
+}
 .h1 {
   font-size: 36px;
   line-height: 43px;
@@ -2205,6 +2210,7 @@ $paymentBoxColor: #f5f5f5;
       font-family: $sfRegular;
       color: #000;
       top: -1px;
+      bottom: 0;
     }
 
     &:after {
@@ -2212,7 +2218,7 @@ $paymentBoxColor: #f5f5f5;
     }
 
     &:before {
-      left: 60px;
+      left: 75px;
     }
 
     &.showFields {
@@ -2225,7 +2231,7 @@ $paymentBoxColor: #f5f5f5;
       color: #000;
       width: 20px;
       order: 1;
-      margin-right: 15px;
+      margin-right: 30px;
 
       &.booking_date_day {
         order: 0;
